# metro-sp-ai

./: README.md  docker-compose.yml  install_opencv_dependencies.sh  pyproject.toml
src/: __init__.py  config.py  main.py  test.py
src/database/: __init___.py  client.py  schema.py
src/functions/: check_face.py  compare_faces.py  detect_face.py  pre_process.py
src/health/: __init__.py  router.py
src/image/: __init__.py  image_model.py  router.py
src/search/: __init__.py  router.py  search_model.py
src/utils/: __init__.py  extract_face.py  face_detection.py
