[project]
name = "metro-sp-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "weaviate-client>=4.9.3",
]


[tool.hatch.build.targets.wheel]
packages = ["src/main"]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
